fix to all post css that caused text overlap

--- a/static/css/allpost.css
+++ b/static/css/allpost.css
@@ -73,7 +73,7 @@ body {
   font-size: 22px;
   font-weight: 500;
   text-align: center;
-  max-height: 54px;
+  /* max-height: 54px; */
   /* overflow-y: hidden; */
 }
 
